# netsoc-api

./: Cargo.toml  Dockerfile  README.md  TODO.md  compose.yaml  schema.sql
db/: database.db
docs/: Maintaining Database.sql  app flow.md  schema.json
scripts/: check.sh  fix.sh
src/: database.db  main.rs  schema.sql
