[package]
name = "netsoc-api"
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[dependencies]
serde = "1.0.219"
serde_json = "^1.0"
actix-web = "4"
rusqlite = { version = "^0.37", features = ["bundled"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
enum_glob_use = "allow"

[profile.release]
lto = true
